当前页面弹框

--- a/application/admin/view/order/get_area_id.html
+++ b/application/admin/view/order/get_area_id.html
@@ -4,7 +4,7 @@
 <!--<div class="layui-container lay_top">-->
 <!--<div class="layui-row layui-col-space30">-->
 <div class="body-form">
-    <form class="layui-form" action="{:url('admin/push/edit','',false)}" tableid="tableReload" method="post" lay-filter="rule" id="formRule">
+    <form class="layui-form" action="" tableid="tableReload" method="post" lay-filter="rule" id="formRule">
         <table class="layui-table yty-form" lay-skin="line" lay-size="sm">
             <colgroup>
                 <col class="tdleft" width="30%">
@@ -175,7 +175,7 @@
         /**
          * 绑定表单事件
          */
-        formValidator.api.bindevent($("form#formRule"));
+//        formValidator.api.bindevent($("form#formRule"));
 
         /**
          * 地区点击选中事件
