--- a/application/admin/view/order/get_area_id.html
+++ b/application/admin/view/order/get_area_id.html
@@ -87,7 +87,7 @@
                     <div class="layui-form">
                         <input type="checkbox" name="cityId[]" title="全部" class="all">
                         <input type="checkbox" name="cityId[]" title="陕西" class="">
-                        <input type="checkbox" name="cityId[]" title="新疆" class="">
+                        <input type="check box" name="cityId[]" title="新疆" class="">
                         <input type="checkbox" name="cityId[]" title="青海" class="">
                         <input type="checkbox" name="cityId[]" title="宁夏" class="">
                         <input type="checkbox" name="cityId[]" title="甘肃" class="">
@@ -194,7 +194,7 @@
         });
 
         /**
-         *全选、反选
+         *省份全选、反选
          */
         form.on('radio(check_all)', function(data){
             var value = data.value;
