--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -2,7 +2,7 @@
 {block name="content"}
 <!--获取省份弹出begin-->
 <div class="body-form layer-form" style="display: none">
-    <form class="layui-form" action="" tableid="tableReload" method="post" lay-filter="rule" id="formRule">
+    <div class="layui-form">
         <table class="layui-table yty-form" lay-skin="line" lay-size="sm">
             <colgroup>
                 <col class="tdleft" width="30%">
@@ -130,11 +130,11 @@
 
         <div class="layui-form-item layer-form-footer">
             <div class="footer-inner">
-                <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed">{:__('Reset')}</button>
+                <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal submit layui-btn-sm btn-embossed">{:__('OK')}</button>
+                <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal btn-embossed reset">{:__('Reset')}</button>
             </div>
         </div>
-    </form>
+    </div>
 </div>
 <!--获取省份弹出end-->
 
@@ -467,16 +467,22 @@
          * 省份点击
          */
         $("body").on("click","#areaId",function (){
-            console.log(123);
-            //var url = "{:url('admin/order/getAreaId','',false)}";
-            //we.api.open(url,'选择所在省份');
-            we.api.open_current_page_layer($(".layer-form"),'选择所在省份','',['80%' , '*']);
+            we.api.open_current_page_layer($(".layer-form"),'选择所在省份',{
+            },['80%' , '*']);
+
+            $("body").on("click",".submit",function (){
+                layer.closeAll();
+            });
+
+            $("body").on("click",".reset",function (){
+                layer.closeAll();
+            });
         })
 
         /**
          * 评价状态、订单类型全选、非全选状态
          */
-        /*form.on('checkbox(check_all)', function(data){
+        form.on('checkbox(check_all)', function(data){
             var value = data.value;
             if(value == 'ALL') {
                 if (data.elem.checked) {
@@ -487,7 +493,37 @@
                     $(this).parent(".layui-form").children('.layui-form-checkbox').removeClass('layui-form-checked');
                 }
             }
-        });*/
+        });
+
+        /**
+         *省份全选、反选
+         */
+        form.on('radio(check_all)', function(data){
+            var value = data.value;
+            if(value == 'all') {
+                $("input[type=checkbox]").prop('checked', true);
+                $(".layui-form-checkbox").addClass('layui-form-checked');
+            } else {
+                $("input[type=checkbox]").prop('checked', false);
+                $(".layui-form-checkbox").removeClass('layui-form-checked');
+            }
+        });
+
+        /**
+         * 地区点击选中事件
+         */
+        $("body").on("click",".layui-form-checkbox",function (){
+            var p = $(this).prev();
+            if(p.attr('class') == 'all' && p.attr('class') !== 'undefined') {
+                if($(this).hasClass('layui-form-checked')) {
+                    $(this).parent(".layui-form").children('input').prop('checked', true);
+                    $(this).parent(".layui-form").children('.layui-form-checkbox').addClass('layui-form-checked');
+                } else {
+                    $(this).parent(".layui-form").children('input').prop('checked', false);
+                    $(this).parent(".layui-form").children('.layui-form-checkbox').removeClass('layui-form-checked');
+                }
+            }
+        });
 
     });
 
