--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -22,12 +22,12 @@
                 <td class="tdleft">华东地区:</td>
                 <td class="tdright">
                     <div class="layui-form">
-                        <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="上海" class="">
-                        <input type="checkbox" name="cityId[]" title="浙江" class="">
-                        <input type="checkbox" name="cityId[]" title="江苏" class="">
-                        <input type="checkbox" name="cityId[]" title="安徽" class="">
-                        <input type="checkbox" name="cityId[]" title="江西" class="">
+                        <input type="checkbox" name="cityId[]"  title="全部" class="all">
+                        <input type="checkbox" name="cityId[]" lay-filter="cityId" value="1" title="上海" class="">
+                        <input type="checkbox" name="cityId[]" lay-filter="cityId" value="2" title="浙江" class="">
+                        <input type="checkbox" name="cityId[]" lay-filter="cityId" value="3" title="江苏" class="">
+                        <input type="checkbox" name="cityId[]" lay-filter="cityId" value="4" title="安徽" class="">
+                        <input type="checkbox" name="cityId[]" lay-filter="cityId" value="5" title="江西" class="">
                     </div>
                 </td>
             </tr>
@@ -35,13 +35,13 @@
                 <td class="tdleft">华北地区:</td>
                 <td class="tdright">
                     <div class="layui-form">
-                        <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="北京" class="">
-                        <input type="checkbox" name="cityId[]" title="天津" class="">
-                        <input type="checkbox" name="cityId[]" title="安徽" class="">
-                        <input type="checkbox" name="cityId[]" title="山西" class="">
-                        <input type="checkbox" name="cityId[]" title="山东" class="">
-                        <input type="checkbox" name="cityId[]" title="内蒙古" class="">
+                        <input type="checkbox" name="cityId[]"  title="全部" class="all">
+                        <input type="checkbox" name="cityId[]" value="6" lay-filter="cityId" title="北京" class="">
+                        <input type="checkbox" name="cityId[]" value="7" lay-filter="cityId" title="天津" class="">
+                        <input type="checkbox" name="cityId[]" value="8" lay-filter="cityId" title="安徽" class="">
+                        <input type="checkbox" name="cityId[]" value="9" lay-filter="cityId" title="山西" class="">
+                        <input type="checkbox" name="cityId[]" value="10" lay-filter="cityId" title="山东" class="">
+                        <input type="checkbox" name="cityId[]" value="11" lay-filter="cityId" title="内蒙古" class="">
                     </div>
                 </td>
             </tr>
@@ -49,10 +49,10 @@
                 <td class="tdleft">华中地区:</td>
                 <td class="tdright">
                     <div class="layui-form">
-                        <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="湖北" class="">
-                        <input type="checkbox" name="cityId[]" title="湖南" class="">
-                        <input type="checkbox" name="cityId[]" title="河南" class="">
+                        <input type="checkbox" name="cityId[]"  title="全部" class="all">
+                        <input type="checkbox" name="cityId[]" value="12" lay-filter="cityId" title="湖北" class="">
+                        <input type="checkbox" name="cityId[]" value="13" lay-filter="cityId" title="湖南" class="">
+                        <input type="checkbox" name="cityId[]" value="14" lay-filter="cityId" title="河南" class="">
                     </div>
                 </td>
             </tr>
@@ -61,10 +61,10 @@
                 <td class="tdright">
                     <div class="layui-form">
                         <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="广东" class="">
-                        <input type="checkbox" name="cityId[]" title="广西" class="">
-                        <input type="checkbox" name="cityId[]" title="福建" class="">
-                        <input type="checkbox" name="cityId[]" title="海南" class="">
+                        <input type="checkbox" name="cityId[]" value="16" lay-filter="cityId" title="广东" class="">
+                        <input type="checkbox" name="cityId[]" value="17" lay-filter="cityId" title="广西" class="">
+                        <input type="checkbox" name="cityId[]" value="18" lay-filter="cityId" title="福建" class="">
+                        <input type="checkbox" name="cityId[]" value="19" lay-filter="cityId" title="海南" class="">
                     </div>
                 </td>
             </tr>
@@ -72,10 +72,10 @@
                 <td class="tdleft">东北地区:</td>
                 <td class="tdright">
                     <div class="layui-form">
-                        <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="辽宁" class="">
-                        <input type="checkbox" name="cityId[]" title="吉林" class="">
-                        <input type="checkbox" name="cityId[]" title="黑龙江" class="">
+                        <input type="checkbox" name="cityId[]"  title="全部" class="all">
+                        <input type="checkbox" name="cityId[]" value="20" lay-filter="cityId" title="辽宁" class="">
+                        <input type="checkbox" name="cityId[]" value="21" lay-filter="cityId" title="吉林" class="">
+                        <input type="checkbox" name="cityId[]" value="22" lay-filter="cityId" title="黑龙江" class="">
                     </div>
                 </td>
             </tr>
@@ -84,11 +84,11 @@
                 <td class="tdright">
                     <div class="layui-form">
                         <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="陕西" class="">
-                        <input type="checkbox" name="cityId[]" title="新疆" class="">
-                        <input type="checkbox" name="cityId[]" title="青海" class="">
-                        <input type="checkbox" name="cityId[]" title="宁夏" class="">
-                        <input type="checkbox" name="cityId[]" title="甘肃" class="">
+                        <input type="checkbox" name="cityId[]" value="23" lay-filter="cityId" title="陕西" class="">
+                        <input type="checkbox" name="cityId[]" value="24" lay-filter="cityId" title="新疆" class="">
+                        <input type="checkbox" name="cityId[]" value="25" lay-filter="cityId" title="青海" class="">
+                        <input type="checkbox" name="cityId[]" value="26" lay-filter="cityId" title="宁夏" class="">
+                        <input type="checkbox" name="cityId[]" value="27" lay-filter="cityId" title="甘肃" class="">
                     </div>
                 </td>
             </tr>
@@ -97,11 +97,11 @@
                 <td class="tdright">
                     <div class="layui-form">
                         <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="四川" class="">
-                        <input type="checkbox" name="cityId[]" title="云南" class="">
-                        <input type="checkbox" name="cityId[]" title="贵州" class="">
-                        <input type="checkbox" name="cityId[]" title="西藏" class="">
-                        <input type="checkbox" name="cityId[]" title="重庆" class="">
+                        <input type="checkbox" name="cityId[]" value="28" lay-filter="cityId" title="四川" class="">
+                        <input type="checkbox" name="cityId[]" value="29" lay-filter="cityId" title="云南" class="">
+                        <input type="checkbox" name="cityId[]" value="30" lay-filter="cityId" title="贵州" class="">
+                        <input type="checkbox" name="cityId[]" value="31" lay-filter="cityId" title="西藏" class="">
+                        <input type="checkbox" name="cityId[]" value="32" lay-filter="cityId" title="重庆" class="">
                     </div>
                 </td>
             </tr>
@@ -109,10 +109,10 @@
                 <td class="tdleft">港澳台地区:</td>
                 <td class="tdright">
                     <div class="layui-form">
-                        <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="香港" class="">
-                        <input type="checkbox" name="cityId[]" title="澳门" class="">
-                        <input type="checkbox" name="cityId[]" title="台湾" class="">
+                        <input type="checkbox" name="cityId[]"  title="全部" class="all">
+                        <input type="checkbox" name="cityId[]" value="33" lay-filter="cityId" title="香港" class="">
+                        <input type="checkbox" name="cityId[]" value="34" lay-filter="cityId" title="澳门" class="">
+                        <input type="checkbox" name="cityId[]" value="35" lay-filter="cityId" title="台湾" class="">
                     </div>
                 </td>
             </tr>
@@ -120,8 +120,8 @@
                 <td class="tdleft">海外地区:</td>
                 <td class="tdright">
                     <div class="layui-form">
-                        <input type="checkbox" name="cityId[]" title="全部" class="all">
-                        <input type="checkbox" name="cityId[]" title="海外" class="">
+                        <input type="checkbox" name="cityId[]"  title="全部" class="all">
+                        <input type="checkbox" name="cityId[]" value="36" lay-filter="cityId" title="海外" class="">
                     </div>
                 </td>
             </tr>
@@ -161,6 +161,7 @@
                                 <input type="mobile" name="mobile" id="mobile" placeholder="" autocomplete="off" class="layui-input input-margin">
                                 省份：
                                 <input type="text" name="areaId" id="areaId" placeholder="" autocomplete="off" class="layui-input input-margin">
+                                <input type="hidden" name="areaIdH" id="areaIdH" placeholder="" autocomplete="off" class="layui-input input-margin">
                                 商品ID：
                                 <input type="text" name="itemId" id="itemId" placeholder="" autocomplete="off" class="layui-input input-margin">
                             </td>
@@ -469,11 +470,23 @@
         $("body").on("click","#areaId",function (){
             we.api.open_current_page_layer($(".layer-form"),'选择所在省份',{
             },['80%' , '*']);
+            var areaId = [];
+            var areaIdCh = []
 
+            //选中省份
             $("body").on("click",".submit",function (){
+                $(".body-form input[type=checkbox]").each(function (index,value) {
+                    if($(this).is(':checked') && $(this).val() != 'on') {
+                        areaId.push($(this).val());
+                        areaIdCh.push($(this).attr('title'));
+                    }
+                })
+                $("#areaId").val(areaIdCh.join(','));
+                $("#areaIdH").val(areaId.join(','));
                 layer.closeAll();
             });
 
+            //重置
             $("body").on("click",".reset",function (){
                 layer.closeAll();
             });
