订单查询，导入、省份选择

--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -574,6 +574,7 @@
                     break;
                 //导入苏宁订单
                 case 'importOrder':
+                    we.api.open("{:url('admin/order/import','',false)}",'导入苏宁订单');
                     we.tips("<li><a href='#'>导入苏宁订单！！！！！</a></li>");
                     break;
                 //导出苏宁订单
