--- a/application/admin/view/widget/importSuning.html
+++ b/application/admin/view/widget/importSuning.html
@@ -7,6 +7,11 @@
         <div class="layui-col-md12 webody">
             <div class="layui-card">
                 <div class="layui-card-body">
+                    <div class="layui-card-header yty-card-header">温馨提示：</div>
+                    <p>1.苏宁后台下载订单报表和宝贝报表（只需下载3个月前的即可，最近3个月的交易数据，金店长CRM会自动同步，无需再作操作 ）</p>
+                    <p>2.点击选择文件上传，将已下载的订单报表（ExportOrderListxxxxxxxx.csv）文件上传，系统会自动关联。</p>
+                    <p>3.最终导入到系统中的数据和文件中的数据可能会存在一些偏差(具体原因有： 1.系统会去掉重复的联系人； 2.系统会过滤掉无效的联系人； 3.苏宁后台导出的数据不完整； 4.其他。)</p>
+                    <p>【重要提示】根据淘宝要求，超过7天未登录软件将停止订单数据推送，会导致订单中心不能正常发送催付物流短信，数据查询出现误差等问题，为确保功能正常使用，请务必每个店铺每周至少登录1次软件。</p>
                     <div class="layui-upload">
                         <button type="button" class="layui-btn layui-btn-normal layui-btn-sm" id="upload">
                             <i class="layui-icon">&#xe654;</i>添加文件(允许上传格式：xlsx、xls)
