--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -101,7 +101,7 @@
         </li>
         <li class="layui-nav-item" lay-unselect>
             <a href="javascript:;">
-                <i class="fa fa-user-circle-o"></i><cite> {$admin.nickname}</cite>
+                <i class="fa fa-user-circle-o"></i><cite> 阿里狗<!--{$admin.nickname}--></cite>
             </a>
             <!--<dl class="layui-nav-child">-->
                 <!--<dd><a lay-href="{:url('profile/index')}">{:__('Profile')}</a></dd>-->
