--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -217,20 +217,29 @@
                                 <tr>
                                     <td class="yty_tdleft"> 关怀条件 :</td>
                                     <td class="yty_tdright">
-                                        每天 <input type="text" name="day_hour_start" id="day_hour_start" placeholder="" autocomplete="off" class="layui-input"> 时 至
-                                        <input type="text" name="day_hour_end" id="day_hour_end" placeholder="" autocomplete="off" class="layui-input">
-                                        时，发送关怀提醒 (其他时间自动延迟到次日发送)
+                                        <input type="checkbox" name="date[check]" lay-skin="primary"  title="" checked="">
+                                        实付金额 <input type="number" value="0.00" min="0" name="actually_paid_start" id="actually_paid_start" placeholder="" autocomplete="off" class="layui-input"> —
+                                        <input type="number" min="0" value="0.00" name="actually_paid_end" id="actually_paid_end" placeholder="" autocomplete="off" class="layui-input">元
                                         <br>
                                         <p class="marginbuttom5"></p>
 
-                                        <input type="radio" name="date_notice_switch" lay-filter="date_notice_switch" value="1" title="超出时间次日通知" checked="">
-                                        <input type="radio" name="date_notice_switch" lay-filter="date_notice_switch" value="0" title="超出时间不发送">
+                                        <input type="checkbox" name="date[check]" lay-skin="primary"  title="" checked="">
+                                        商品数量 <input type="number" value="0" min="0" name="number_of_products_start" id="number_of_products_start" placeholder="" autocomplete="off" class="layui-input"> —
+                                        <input type="number" min="0" value="" name="number_of_products_end" id="number_of_products_end" placeholder="" autocomplete="off" class="layui-input">件
                                         <br>
                                         <p class="marginbuttom5"></p>
 
-                                        午休时间 <input type="text" name="day_hour_start" id="siesta_hour_start" placeholder="" autocomplete="off" class="layui-input"> 时 至
-                                        <input type="text" name="day_hour_end" id="siesta_hour_end" placeholder="" autocomplete="off" class="layui-input">
-                                        不发送
+                                        <div class="layui-inline yty-form">
+                                        <span>订单中</span>
+                                            <div class="layui-input-inline">
+                                            <select name="modules" lay-verify="required" lay-search=""><option value="1">包含</option><option value="0">不包含</option></select>
+                                            </div>
+                                        <span>指定商品</span>
+                                            <button type="button" name="" id="" placeholder="" autocomplete="off" class="layui-btn layui-btn-sm  layui-btn-primary">默认不选择商品</button>
+                                        </div>
+                                        <br>
+                                        <p class="marginbuttom5"></p>
+                                        <input type="checkbox" name="date[check]" lay-skin="primary"  title="" checked="">订单类型为<span style="color: #FF5722">货到付款</span>时才发送提醒
                                     </td>
                                 </tr>
 
